2012-07-03  Nick Alcock  <nick.alcock@oracle.com>

	The great dt_module revamp.

	* libdtrace/dt_symtab.h: New file, symbol table management.
	* libdtrace/dt_symtab.c: New file, implementation thereof.
	* libdtrace/Build: Add it.

	* libdtrace/dt_link.c (dt_symtab_lookup): Rename to...
	(dt_elf_symtab_lookup): ... this less confusing name.
	(process_obj): Adjust accordingly.

	* libdtrace/dt_string.c (strrstr): New function.
	* libdtrace/dt_string.h (strrstr): Prototype it.
	* Makeconfig: Provide it if not already available.

	* Makeoptions (coverage): Set LDFLAGS as well.

	* libdtrace/dt_impl.h (dtrace_hdl): Introduce dt_module_path.
	* libdtrace/dt_open.c (dt_vopen): Default it from /lib/modules/
	and the OS release.
	* libdtrace/dt_options.c (_dtrace_ctoptions): New 'modpath'
	compile-time option (though also used at runtime).
	(dt_opt_module_path): New.
	(dt_opt_rate): Quash compiler warning.

	* libdtrace/dtrace.h (DTRACE_O_NOSYS): Delete, irrelevant.
	Renumber later flags.
	(dtrace_update): Now returns an int.
	(dtrace_addr_range): New.
	(dtrace_addr_range_cmp): Likewise.
	(dtrace_objinfo): dto_text_va and dto_data_va are transformed
	into address ranges: dto_bss_va and dto_bss_size are dropped.
	(comment): Mention that address ranges need to be freed.

	* libdtrace/dt_error.c (EDT_CORRUPT_KALLSYMS): New error,
	reported when /proc/kallsyms is corrupt.
	(EDT_ELFCLASS): New error, reported when the ELF class is unknown.
	(EDT_OBJIO): New error, reported when object files are unreadable.

	* libdtrace/dt_impl.h: Introduce the errors here too.
	No longer include <sys/objfs.h> or <gelf.h>. Include <dt_symtab.h>.
	(dt_sym): Rename to...
	(dt_modsym): ... this, for clarity.  Adjust field names too.
	(dt_module): dm_*_va and dm_*_size changes as in the dtrace_objinfo,
	using address ranges rather than single addresses.  Emphasise which
	fields are only useful for userspace modules versus kernel moudules.
	Introduce dm_ctdata_name and dm_kernsyms. Drop dm_info.